Kubernetes Project/simpleblog-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simpleblog-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      component: web
  template:
    metadata:
      labels:
        component: web
    spec:
      containers:
        - name: simpleblog
          image: sangeetha18/simpleblog
          ports:
            - containerPort: 3000
