Kubernetes Project/postgres-clusterip-services.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres-clusterip-service
spec:
  type: ClusterIP
  selector:
    component: web
  ports:
    - port: 5432
      targetPort: 5432
